--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ span {
 }
 
 h1 {
-    color: var(--primary-yellow);
+    color: var(--neutral-black);
     font-size: 1.5rem;
     font-weight: var(--fontWeight-bold);
     cursor: pointer ;
